# quota-ledger

./: .env.example  .gitignore  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  tests.yml
app/: main.py
app/api/v1/: accounts.py  router.py
app/api/v1/routes/: accounts.py
app/domain/: aggregate.py  commands.py  errors.py  events.py  types.py
app/infra/db/: init_db.py  session.py
app/infra/event_store/: models.py  repository.py
app/infra/projections/: models.py
app/projections/: projector.py
app/services/: account_service.py
migrations/: README.md  env.py
migrations/versions/: 25d17e2a7853_initial_schema.py
tests/: conftest.py
tests/integration/: test_health_smoke.py  test_projection_updates.py
tests/unit/: test_aggregate_invariants.py
